Fix menu colors and gap.

--- a/scss/base/colors.scss
+++ b/scss/base/colors.scss
@@ -30,6 +30,11 @@
   --color-action-active:          var(--color-blue-40);
   --color-separator:              var(--color-grey-20);
 
+  --color-main-menu-background:   var(--color-grey-90);
+  --color-main-menu-hover:        var(--color-grey-80);
+  --color-main-menu-text:         var(--color-grey-20);
+  --color-main-menu-separator:    var(--color-white);
+
   --color-table-zebra:            var(--color-grey-90);
   --color-table-head:             var(--color-grey-80);
   --color-table-border:           var(--color-grey-20);
