--- a/templates/region/region--header-menu.scss
+++ b/templates/region/region--header-menu.scss
@@ -13,12 +13,12 @@
 
     // Add lines between items in the dropdowns;
     li {
-      li + li {
-        border-top: 1px solid var(--color-grey-90);
+      li {
+        border-top: 1px solid var(--color-main-menu-separator);
       }
       // Add a line around the dropdown in case of menu overlap.
       ul {
-        box-shadow: 0px 0px 1px 1px var(--color-grey-90);
+        box-shadow: 0px 0px 1px 1px var(--color-main-menu-separator);
       }
     }
 
@@ -61,7 +61,7 @@
         ul {
           position: absolute;
           z-index: 100;
-          top: calc(100% + 1px);
+          top: calc(100%);
           left: 0;
           left: var(--shift-left);
           width: 20em;
